--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,7 @@ body {
   margin: 5% auto;
   width: 1050px;
   border: 1px dashed blue;
+  /*font-size: 14px;*/
 }
 
 .main-container {
@@ -18,6 +19,7 @@ body {
 .col-1, .col-3 {
   width: 100px;
   display: inline-block;
+  vertical-align: top;
 }
 
 .col-2 {
@@ -36,12 +38,48 @@ body {
 
 header{
   border: 1px solid red;
+  height: 50px;
+  text-align: center;
+  font-size: 26px;
 }
 
 footer{
+  height: 100px;
   border: 1px solid red;
 }
 
 div{
   border: 1px solid red;
+}
+
+/*NEW CODE*/
+
+.col-2 .row-1 div,
+.col-2 .row-3 div{
+  display: inline-block;
+  width: 98px;
+  height: 98px;
+  margin-left:1px;
+  text-align: center;
+}
+
+.col-2 .row-1,
+.col-2 .row-3{
+  margin-left: 2px;
+}
+
+.col-2 .row-2 div{
+  margin-left: 1px;
+}
+
+.col-2 .row-2 div div{
+  display: inline-block;
+  width: 98px;
+  height: 98px;
+}
+
+.col-1 .row-2 div,
+.col-3 .row-2 div{
+  height: 100px;
+  text-align: center;
 }
