--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -108,8 +108,6 @@ div{
   /*border: 1px dashed blue;*/
 }
 
-/*NEW CODE*/
-
 .col-2 .row-1 div,
 .col-2 .row-3 div{
   display: inline-block;
@@ -132,4 +130,24 @@ div{
 .col-2 .row-1,
 .col-2 .row-3 {
   margin-left: 2px;
+}
+
+.button-bank{
+  margin-left: 250px;
+  margin-top: 10px;
+}
+
+.btn{
+  display: inline-block;
+  text-align: center;
+  padding-top: 3px;
+  width: 35px;
+  height: 20px;
+  background: #999;
+  background-image: linear-gradient(to bottom right, #aaa, #ddd);
+  border-radius: 3px;
+}
+
+.btn:hover{
+  background-image: linear-gradient(to bottom right, #aaa, #666);
 }
