--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,61 +1,3 @@
-/* position numbers in rank and file vertically */
-.main-container [class*='col-']:nth-child(2n-1) .row-2 div {
-  padding-top: 24px;
-  /*border: 1px dashed red;*/
-}
-
-/* position letters in rank an file */
-/*.main-container .col-2 [class^='row-']:nth-child(2n-1) div {
-  padding-top: 15px;
-}*/
-
-/* position letters in rank and file vertically */
-.main-container .col-2 .row-1 div {
-  padding-top: 10px;
-}
-
-/* position letters in rank and file vertically */
-.main-container .col-2 .row-3 div {
-  /*padding-top: 10px;*/
-  margin-top: -7px;
-  /*border: 1px dashed blue;*/
-}
-
-
-/* position numbers in rank and file horizontally */
-.col-1 .row-2 div {
-  height: 68px;
-  text-align: right;
-  padding-right: 15px;
-
-}
-
-/* position numbers in rank and file horizontally */
-.col-3 .row-2 div {
-  height: 68px;
-  padding-left: 10px;
-}
-
-.game-container [class*='game-row-'] div {
-    padding: 15px;
-    background: #EFEFEF;
-    text-align: center;
-    /* color: #C7C767;   gold */
-    /* color: #ABAB90;    silver */
-    font-size: 35px;
-    vertical-align: top;   /*  keeps game space <div> aligned against top of container regardless of content */
-}
-
-/* color every other game board space black in odd rows */
-.game-container [class*='game-row-']:nth-child(2n-1) div:nth-child(2n) {
-  background: #888;
-}
-
-/* color every other game board space black in even rows */
-.game-container [class*='game-row-']:nth-child(2n) div:nth-child(2n-1) {
-  background: #888;
-}
-
 *, *:after, *:before {
   box-sizing: border-box;
 }
@@ -64,7 +6,6 @@ body {
   margin: 5% auto;
   width: 750px;
   font-family: 'Lato', Arial, sans-serif;
-  /*border: 1px dashed blue;*/
 }
 
 .main-container {
@@ -92,24 +33,17 @@ body {
   margin: 5px 0px;
 }
 
-header{
-  /*border: 1px solid red;*/
+header {
   height: 30px;
   text-align: center;
   font-size: 26px;
 }
 
-footer{
+footer {
   height: 30px;
-  /*border: 1px solid red;*/
 }
 
-div{
-  /*border: 1px dashed blue;*/
-}
-
-.col-2 .row-1 div,
-.col-2 .row-3 div{
+.col-2 .row-1 div, .col-2 .row-3 div {
   display: inline-block;
   width: 68px;
   height: 35px;
@@ -117,27 +51,26 @@ div{
   text-align: center;
 }
 
-.col-2 .row-2 div{
+.col-2 .row-2 div {
   margin-left: 1px;
 }
 
-.col-2 .row-2 div div{
+.col-2 .row-2 div div {
   display: inline-block;
   width: 68px;
   height: 68px;
 }
 
-.col-2 .row-1,
-.col-2 .row-3 {
+.col-2 .row-1, .col-2 .row-3 {
   margin-left: 2px;
 }
 
-.button-bank{
+.button-bank {
   margin-left: 250px;
   margin-top: 10px;
 }
 
-.btn{
+.btn {
   display: inline-block;
   text-align: center;
   padding-top: 3px;
@@ -148,6 +81,52 @@ div{
   border-radius: 3px;
 }
 
-.btn:hover{
+.btn:hover {
   background-image: linear-gradient(to bottom right, #aaa, #666);
+}
+
+/* position numbers in rank and file vertically */
+.main-container [class*='col-']:nth-child(2n-1) .row-2 div {
+  padding-top: 24px;
+}
+
+/* position letters in rank and file vertically */
+.main-container .col-2 .row-1 div {
+  padding-top: 10px;
+}
+
+/* position letters in rank and file vertically */
+.main-container .col-2 .row-3 div {
+  margin-top: -7px;
+}
+
+/* position numbers in rank and file horizontally */
+.col-1 .row-2 div {
+  height: 68px;
+  text-align: right;
+  padding-right: 15px;
+}
+
+/* position numbers in rank and file horizontally */
+.col-3 .row-2 div {
+  height: 68px;
+  padding-left: 10px;
+}
+
+.game-container [class*='game-row-'] div {
+    padding: 15px;
+    background: #efefef;
+    text-align: center;
+    font-size: 35px;
+    vertical-align: top;   /*  keeps game space <div> aligned against top of container regardless of content */
+}
+
+/* color every other game board space black in odd rows */
+.game-container [class*='game-row-']:nth-child(2n-1) div:nth-child(2n) {
+  background: #888;
+}
+
+/* color every other game board space black in even rows */
+.game-container [class*='game-row-']:nth-child(2n) div:nth-child(2n-1) {
+  background: #888;
 }
